Fixed vertical align  for section (wrong height of intro::before )

--- a/css/landing.css
+++ b/css/landing.css
@@ -48,7 +48,8 @@ body {
 .intro:before {
     content: '';
     display: inline-block;
-    height: 100%;
+    height: 50vh;
+    margin-top: -25vh;
     vertical-align: middle;
     margin-right: -0.25em;
 }
